--- a/example/deps.kproject.yml
+++ b/example/deps.kproject.yml
@@ -1,5 +1,5 @@
 dependencies:
-  #- git::korge-swf::korlibs/korge-swf::/korge-swf::da64d67195a7703a589d58f93cadfa3e00232685
+  - git::korge-swf::korlibs/korge-swf::/korge-swf::f7af9d42e39ce7914f7f1e03d7ca404c8f4a50d8
   #- git::korge-swf::korlibs/korge-swf::/korge-swf::v0.0.1
-  - ../korge-swf
+  #- ../korge-swf
 
