--- a/korge-swf/kproject.yml
+++ b/korge-swf/kproject.yml
@@ -1,4 +1,4 @@
 name: "korge-swf"
 dependencies:
-    - "maven::common::com.soywiz.korlibs.korge2:korge:3.3.0"
+    - "maven::common::com.soywiz.korlibs.korge2:korge"
 
