--- a/korge-swf/kproject.yml
+++ b/korge-swf/kproject.yml
@@ -2,4 +2,4 @@ name: "korge-swf"
 dependencies:
     - "maven::common::com.soywiz.korlibs.korge2:korge"
     #- git::korge-box2d::korlibs/korge-ext::/korge-ktree::84a9d06c27dcd728ea23824964bcc986671ac691::v0
-    - git::korge-box2d::korlibs/korge-ext::/korge-text2::84a9d06c27dcd728ea23824964bcc986671ac691::v0
+    - git::korge-text2::korlibs/korge-ext::/korge-text2::0.0.1
