--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,7 +30,7 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         build-root-directory: .
-        arguments: jvmTest jvmJar
+        arguments: jvmTest jvmJar jsNodeTest
   build-windows:
     runs-on: windows-latest
     steps:
