--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,31 +17,19 @@ permissions:
   contents: read
 
 jobs:
-  build-linux:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '21'
         distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+    - name: Build & Test with Gradle
+      uses: gradle/gradle-build-action@842c587ad8aa4c68eeba24c396e15af4c2e9f30a # https://github.com/gradle/gradle-build-action/releases/tag/v2.9.0
       with:
-        build-root-directory: .
-        arguments: jvmTest jvmJar jsNodeTest
-  build-windows:
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        build-root-directory: .
-        arguments: jvmTest jvmJar
+        arguments: jvmTest
+        build-root-directory: ./
